--- a/live.html
+++ b/live.html
@@ -26,7 +26,7 @@
       <h2>Ζωντανή Ροή</h2>
       <audio controls>
         <!-- Αντικατέστησε το URL με το δικό σου stream -->
-        <source src="http://localhost:8000/stream" type="audio/mpeg">
+        <source src="https://6280-109-242-226-46.ngrok-free.app/stream" type="audio/mpeg">
         Ο περιηγητής σας δεν υποστηρίζει το στοιχείο audio.
       </audio>
     </section>
